[package]
name = "ubusman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-ssh2-lite = { version = "0.4.5", features = ["async-io"] }
directories-next = "2.0.0"
eframe = "0.21.3"
egui = "0.21.0"
hex = "0.4.3"
image = "0.24.6"
lazy-regex = "2.5.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
shell-escape = "0.1.5"
smol = "1.3.0"
ssh2 = "0.9.4"
syntect = "5.0.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
toml = "0.7.3"
