[package]
name = "ubusman"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-ssh2-lite = { version = "0.4.5", features = ["async-io"] }
directories-next = "2.0.0"
eframe = "0.21.3"
egui = "0.21.0"
git-version = "0.3.5"
hex = "0.4.3"
image = "0.24.6"
lazy-regex = "2.5.0"
lazy_static = "1.4.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
shell-escape = "0.1.5"
smol = "1.3.0"
ssh2 = "0.9.4"
syntect = "5.0.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.7.3"
version = "3.0.0"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*